Fixed code spacing and general look

--- a/style.css
+++ b/style.css
@@ -1,100 +1,100 @@
 body {
-    background-image: url("https://cdn.pixabay.com/photo/2017/09/14/22/42/milky-way-2750627_1280.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+  background-image: url("https://cdn.pixabay.com/photo/2017/09/14/22/42/milky-way-2750627_1280.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 /*index.html*/
-#name{
-    position: absolute;
-    top: 5%;
-    left: 25%;
-    height: 10%;
-    width: 50%;
-    text-align: center;
-    color:rgb(178, 222, 241);
-    font-family: 'Tillana', cursive;
+#name {
+  position: absolute;
+  top: 5%;
+  left: 25%;
+  height: 10%;
+  width: 50%;
+  text-align: center;
+  color: rgb(178, 222, 241);
+  font-family: "Tillana", cursive;
 }
-#goal{
-    position: absolute;
-    top: 15%;
-    left: 30%;
-    height: 3%;
-    width: 40%;
-    text-align: center;
-    color:rgb(178, 222, 241);
-    font-family: 'Tillana', cursive;
+#goal {
+  position: absolute;
+  top: 15%;
+  left: 30%;
+  height: 3%;
+  width: 40%;
+  text-align: center;
+  color: rgb(178, 222, 241);
+  font-family: "Tillana", cursive;
 }
-#instructions{
-    position: absolute;
-    top: 25%;
-    left: 35%;
-    height: 30%;
-    width: 30%;
-    text-align: center;
-    text-overflow: scroll;
-    color:rgb(178, 222, 241);
-    font-family: 'Tillana', cursive;
+#instructions {
+  position: absolute;
+  top: 25%;
+  left: 35%;
+  height: 30%;
+  width: 30%;
+  text-align: center;
+  text-overflow: scroll;
+  color: rgb(178, 222, 241);
+  font-family: "Tillana", cursive;
 }
-#start{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%,-60%);
-    text-align: center;
-    font-family: 'Tillana', cursive;
+#start {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  text-align: center;
+  font-family: "Tillana", cursive;
 }
-#story{
-    position: absolute;
-    top: 70%;
-    left: 25%;
-    height: 25%;
-    width: 50%;
-    text-align: center;
-    text-overflow: scroll;
-    color:rgb(178, 222, 241);
-    font-family: 'Tillana', cursive;
+#story {
+  position: absolute;
+  top: 70%;
+  left: 25%;
+  height: 25%;
+  width: 50%;
+  text-align: center;
+  text-overflow: scroll;
+  color: rgb(178, 222, 241);
+  font-family: "Tillana", cursive;
 }
 
 /*play.html*/
 #scoring {
-    position: absolute;
-    top: 5%;
-    left: 90%;
-    font-size: 25px;
-    color:rgb(178, 222, 241);
-    font-family: 'Tillana', cursive;
+  position: absolute;
+  top: 5%;
+  left: 90%;
+  font-size: 25px;
+  color: rgb(178, 222, 241);
+  font-family: "Tillana", cursive;
 }
-#reminder{
-    position: absolute;
-    top: 3%;
-    left: 3%;
-    font-size: 15px;
-    color:rgb(178, 222, 241);
-    font-family: 'Tillana', cursive;
+#reminder {
+  position: absolute;
+  top: 3%;
+  left: 3%;
+  font-size: 15px;
+  color: rgb(178, 222, 241);
+  font-family: "Tillana", cursive;
 }
-#stop{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 20%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-family: 'Tillana', cursive;
-    z-index: 0;
-    background-color: rgba(211, 166, 233);
+#stop {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 20%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: "Tillana", cursive;
+  z-index: 0;
+  background-color: rgba(211, 166, 233);
 }
-#end{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 35%;
-    width: 30%;
-    font-size: 30px;
-    transform: translate(-50%,-50%);
-    text-align: center;
-    font-family: 'Tillana', cursive;
-    z-index: 0;
-    background-color: rgba(211, 166, 233, 0.7);
+#end {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 35%;
+  width: 30%;
+  font-size: 30px;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: "Tillana", cursive;
+  z-index: 0;
+  background-color: rgba(211, 166, 233, 0.7);
 }
